<resources>
    <string name="app_name">Udyog Jaal</string>
    <string name="userName">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_signup_here">Don\'t have an account? SignUp Here</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm password</string>
    <string name="job_provider">JOB\nPROVIDER</string>
    <string name="job_seeker">JOB\nSEEKER</string>
    <string name="guest">GUEST</string>
    <string name="select_user_type">SELECT USER TYPE</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="other">other</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="languages_known">Languages Known</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="kannada">Kannada</string>
    <string name="telgu">Telgu</string>
    <string name="malyalam">Malyalam</string>
    <string name="tamil">Tamil</string>
    <string name="owner_name">Owner Name</string>
    <string name="enterprise_name">Enterprise Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="field">Field</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="permanent">Permanent</string>
    <string name="temporary">Temporary</string>
    <string name="contract">Contract</string>
    <string name="salary">Monthly Salary</string>
    <string name="requirements">Requirements</string>
    <string name="billing">Billing using computer</string>
    <string name="driving">Driving two wheeler vehicle</string>
    <string name="post_name">Available Post</string>
    <string name="job_category">Job Category</string>
    <string-array name="customer_type">
        <item>Select Profile</item>
        <item>Job Seeker</item>
        <item>Job Provider</item>
        <item>Guest</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="manager_name">Manger Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="job_type">Job Type</string>
    <string name="proceed">Proceed</string>
    <string name="post">Post</string>
    <string name="target_tittle">Target Tittle</string>
    <string name="expericence">Expericence</string>
    <string name="experience">Experience</string>
    <string name="electrical">Electricals</string>
    <string name="hardware">Hardware and Tools</string>
    <string name="paint_and_sanitary">Paint and Sanitary</string>
    <string name="provisional_store">Proivisional Store</string>
    <string name="fancy_store">Fancy Store</string>
    <string name="textile">Textile Store</string>
    <string name="glass">Glass and Plywood</string>
    <string name="wholesale">Wholesale Store</string>
    <string name="retail">Retailer Store</string>
    <string name="supplier">Supplier</string>
    <string name="driving2">Two Wheeler Driving</string>
    <string name="driving4">Four Wheeler Driving</string>
    <string name="skills">Skills</string>
    <string name="using_google_map">Using Google map</string>
    <string name="good_knowledge_about_locality">Good knowledge about Locality</string>
    <string name="state">State</string>
    <string name="submit">Submit</string>
</resources>