<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seekers_root"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/provider_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="20dp"
        android:text="@string/enterprise_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekersImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

 <TextView
        android:id="@+id/provider_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="20dp"
        android:text="@string/contact_number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekers_root"
        app:layout_constraintStart_toEndOf="@+id/seekersImage"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/provider_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="20dp"
        android:text="@string/field"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/seekers_root"
        app:layout_constraintStart_toEndOf="@+id/seekersImage"
        tools:ignore="RtlSymmetry" />
</androidx.cardview.widget.CardView>