<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seekers_root"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/seekersImage"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:layout_margin="15dp"
        android:background="@drawable/round_image"
        android:scaleType="centerCrop"
        android:src="@drawable/power_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />

    <TextView android:id="@+id/seekers_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart = "130dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekersImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />
    <TextView android:id="@+id/seekers_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/experience"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekers_root"
        app:layout_constraintStart_toEndOf="@+id/seekersImage"
        tools:ignore="RtlSymmetry" />
    <TextView android:id="@+id/seekers_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/field"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekers_root"
        app:layout_constraintStart_toEndOf="@+id/seekersImage"
        tools:ignore="RtlSymmetry" />
</androidx.cardview.widget.CardView>